<resources>
    <string name="app_name">DentistApp</string>
    <string name="textviewmenu">Menu</string>
    <string name="servicesbtn">Servicios</string>
    <string name="scheduledatebtn">Agendar cita</string>
    <string name="myappointmentsbtn">Mis citas</string>
    <string name="button3">Tips</string>
    <string name="locationbtn">Ubicación</string>
    <string name="contactbtn">Contáctanos</string>
    <string name="textview1">TextView</string>
    <string name="examen_bucodental_inicial">Examen Bucodental Inicial</string>
    <string name="el_examen_bucal_inicial_incluye_un_examen_dental_un_diagn_stico_y_las_recomendaciones_correspondientes_al_tratamiento_se_pueden_realizar_durante_el_procedimiento_radiograf_as_para_obtener_un_diagn_stico_adecuado_de_los_dientes">El examen bucal inicial incluye un examen dental, un diagnóstico y las recomendaciones correspondientes al tratamiento. \nSe pueden realizar durante el procedimiento radiografías para obtener un diagnóstico adecuado de los dientes.</string>
    <string name="procedimientos_de_obturaci_n_o_llenado_dental">Procedimientos de llenado dental</string>
    <string name="la_mayor_a_de_las_personas_necesitan_al_menos_un_empaste_dental_durante_su_vida_generalmente_se_utilizan_con_mayor_frecuencia_para_tratar_las_caries_aunque_tambi_n_son_utilizados_para_reparar_dientes_que_se_han_desgastado_con_el_tiempo">La mayoría de las personas necesitan al menos un empaste dental durante su vida. Generalmente se utilizan con mayor frecuencia para tratar las caries, aunque también son utilizados para reparar dientes que se han desgastado con el tiempo.</string>
    <string name="extracciones_dentales">Extracciones dentales</string>
    <string name="la_extracci_n_dental_es_el_retiro_de_un_diente_de_su_cavidad_alveolar_del_hueso_maxilar_o_mandibular_si_un_diente_se_ha_roto_o_da_ado_por_caries_su_dentista_intentar_arreglarlo_con_una_obturaci_n_dental_una_corona_u_otro_tratamiento">La extracción dental es el retiro de un diente de su cavidad alveolar del hueso maxilar o mandibular. Si un diente se ha roto o dañado por caries, su dentista intentará arreglarlo con una obturación dental, una corona u otro tratamiento.</string>
    <string name="servicios_de_limpieza_dental">Servicios de limpieza dental</string>
    <string name="la_limpieza_dental_tambi_n_llamada_profilaxis_dental_se_hace_para_eliminar_la_placa_y_el_c_lculo_sarro_que_se_acumula_en_los_dientes_durante_el_paso_del_tiempo">La limpieza dental, también llamada profilaxis dental, se hace para eliminar la placa y el cálculo (sarro) que se acumula en los dientes durante el paso del tiempo.</string>
    <string name="ortodoncia">Ortodoncia</string>
    <string name="los_brackets_y_la_ortodoncia_se_utilizan_para_corregir_la_mordedura_deficiente_u_oclusi_n_dental_defectuosa_cuando_los_dientes_est_n_amontonados_o_torcidos">Los brackets y la ortodoncia se utilizan para corregir la \'mordedura deficiente\' u oclusión dental defectuosa (cuando los dientes están amontonados o torcidos).</string>
    <string name="tratamientos_de_blanqueamiento">Tratamientos de blanqueamiento</string>
    <string name="son_procedimientos_no_invasivos_que_ayudan_a_eliminar_las_manchas_y_a_recuperar_el_color_natural_de_los_dientes">Son procedimientos no invasivos que ayudan a eliminar las manchas y a recuperar el color natural de los dientes.</string>
    <string name="puentes_dentales">Puentes dentales</string>
    <string name="los_puentes_dentales_son_una_pr_tesis_fija_que_sirve_para_reemplazar_dientes_ausente_un_puente_dental_puede_estar_cementado_sobre_dientes_o_sobre_implantes_y_van_desde_las_3_hasta_las_6_unidades_dentales">Los puentes dentales son una prótesis fija, que sirve para reemplazar dientes ausente. Un puente dental puede estar cementado sobre dientes o sobre implantes y van desde las 3 hasta las 6 unidades dentales.</string>
    <string name="carillas_dentales">Carillas dentales</string>
    <string name="las_carillas_dentales_son_piezas_delgadas_de_porcelana_del_color_del_diente_que_se_cementan_a_las_superficies_delanteras_de_los_dientes_naturales_y_son_una_manera_de_abordar_una_variedad_de_problemas_f_sicos_y_est_ticos">Las carillas dentales son piezas delgadas de porcelana del color del diente que se cementan a las superficies delanteras de los dientes naturales, y son una manera de abordar una variedad de problemas físicos y estéticos.</string>
    <string name="ex_menes_de_rutina">Exámenes de rutina</string>
    <string name="para_gozar_de_una_buena_salud_bucodental_es_necesario_hacerse_una_revisi_n_dental_de_forma_peri_dica_dependiendo_de_la_edad_de_las_personas_y_de_las_condiciones_en_las_que_se_encuentre_su_dentadura_se_recomienda_acudir_al_dentista_cada_6_meses_o_un_a_o">Para gozar de una buena salud bucodental es necesario hacerse una revisión dental de forma periódica. Dependiendo de la edad de las personas y de las condiciones en las que se encuentre su dentadura, se recomienda acudir al dentista cada 6 meses o un año.</string>
    <string name="cep_llate_los_dientes_al_menos_3_veces_al_d_a">Cepíllate los dientes al menos 3 veces al día</string>
    <string name="el_n_mero_de_cepillados_de_dientes_diarios_debe_ser_de_al_menos_tres_veces_al_d_a_y_cada_una_de_ellas_debe_durar_al_menos_dos_minutos_en_caso_de_enc_as_con_problemas_estas_medidas_no_deben_saltarse_bajo_ning_n_concepto_y_por_supuesto_despu_s_del_cepillado_de_la_noche_no_se_podr_comer_ni_beber_nada_excepto_agua">El número de cepillados de dientes diarios, debe ser de al menos tres veces al día, y cada una de ellas debe durar al menos dos minutos. En caso de encías con problemas, estas medidas no deben saltarse bajo ningún concepto, y por supuesto después del cepillado de la noche, no se podrá comer ni beber nada, excepto agua.</string>
    <string name="come_sano">Come sano</string>
    <string name="comer_sano_tambi_n_propicia_un_cuidado_de_los_dientes_preventivo_es_decir_existen_ciertos_alimentos_que_favorecen_la_auto_limpieza_de_los_dientes_como_las_manzanas_que_al_morder_arrastran_placa_bacteriana_y_no_se_fija_sta_en_el_esmalte_de_igual_forma_beber_agua_ayuda_a_diluir_la_saliva_para_que_no_se_quede_estancada_en_la_boca_se_encuentre_hidratada_y_fomente_un_aliento_fresco_y_sano">Comer sano también propicia un cuidado de los dientes preventivo, es decir, existen ciertos alimentos que favorecen la auto-limpieza de los dientes, como las manzanas, que al morder arrastran placa bacteriana, y no se fija ésta en el esmalte. De igual forma, beber agua ayuda a diluir la saliva, para que no se quede estancada en la boca, se encuentre hidratada y fomente un aliento fresco y sano.</string>
    <string name="utilice_hilo_dental_diariamente">Utilice Hilo dental diariamente</string>
    <string name="el_uso_diario_de_hilo_dental_ayuda_a_eliminar_las_bacterias_y_la_placa_que_se_acumula_entre_los_dientes_si_usted_nota_sangre_o_inflamaci_n_debido_al_uso_de_hilo_dental_visite_a_su_dentista_para_usar_hilo_dental_adecuadamente_envuelva_los_extremos_del_hilo_dental_alrededor_de_los_dedos_ndice_de_cada_mano_y_use_el_hilo_dental_entre_cada_diente_y_alrededor_de_ellos">El uso diario de hilo dental ayuda a eliminar las bacterias y la placa que se acumula entre los dientes. Si usted nota sangre o inflamación debido al uso de hilo dental visite a su dentista. Para usar hilo dental adecuadamente, envuelva los extremos del hilo dental alrededor de los dedos índice de cada mano y use el hilo dental entre cada diente y alrededor de ellos.</string>
    <string name="l_mite_ingesti_n_de_bebidas_cidas">Límite Ingestión de bebidas ácidas</string>
    <string name="algunas_bebidas_cidas_incluyen_refrescos_caf_y_vino_las_bebidas_cidas_disuelven_el_esmalte_de_sus_dientes_que_conducen_a_sensibilidad_y_cavidades_si_usted_consume_bebidas_cidas_es_recomendable_usar_un_popote_y_tomar_agua_despu_s_para_naturalizar_algo_del_cido">Algunas bebidas ácidas incluyen refrescos, café y vino. Las bebidas ácidas disuelven el esmalte de sus dientes que conducen a sensibilidad y cavidades. Si usted consume bebidas ácidas, es recomendable usar un popote, y tomar agua después para naturalizar algo del ácido.</string>
    <string name="reduce_el_consumo_de_alcohol">Reduce el consumo de alcohol</string>
    <string name="el_alcohol_con_c_tricos_afecta_al_ph_de_la_boca_corrompiendo_el_esmalte_de_los_dientes_la_acidez_de_la_boca_debe_permanecer_entre_5_6_y_7_6_de_ph_con_el_consumo_del_alcohol_los_niveles_de_ph_disminuye_por_debajo_de_4_5_favoreciendo_los_problemas_de_caries_y_el_aumento_de_la_erosi_n_dental">El alcohol con cítricos afecta al pH de la boca, corrompiendo el esmalte de los dientes. La acidez de la boca debe permanecer entre 5,6 y 7,6 de pH. Con el consumo del alcohol, los niveles de pH disminuye por debajo de 4,5, favoreciendo los problemas de caries y el aumento de la erosión dental.</string>
    <string name="visite_el_dentista_cada_6_meses">Visite el dentista cada 6 meses</string>
    <string name="es_recomendado_que_visite_a_su_dentista_al_menos_2_veces_al_a_o_para_una_limpieza_y_m_s_frecuentemente_si_usted_tiene_problemas_en_las_enc_as_o_caries_extensas_si_usted_est_sufriendo_de_dolor_de_muelas_o_sangrado_de_enc_as_haga_una_cita_lo_m_s_pronto_posible_su_dentista_puede_ayudar_a_controlar_y_tratar_los_s_ntomas_y_causas">Es recomendado que visite a su dentista al menos 2 veces al año para una limpieza, y más frecuentemente si usted tiene problemas en las encías o caries extensas. Si usted está sufriendo de dolor de muelas o sangrado de encías haga una cita lo más pronto posible, su dentista puede ayudar a controlar y tratar los síntomas y causas.</string>
    <string name="todo">TODO</string>
    <string name="date">Date</string>
    <string name="agenda_una_cita">Agenda una cita:</string>
    <string name="time">Time</string>
    <string name="agendar">Agendar</string>
    <string name="citas_virtuales">Citas virtuales</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="log_in">Log In</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="registrarse">Registrarse</string>
    <string name="somos_un_grupo_de_profesionales_especializados_en_las_distintas_reas_de_la_odontolog_a_y_que_tenemos_como_principal_objetivo_cuidar_tu_salud_dental">Somos un grupo de profesionales, especializados en las distintas áreas de la odontología y que tenemos como principal objetivo cuidar tu salud dental.</string>
</resources>

