<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/crea_una_cuenta"
        android:textColor="@color/lightblue1"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/nunito_sans"
        android:hint="@string/correo"
        android:padding="6dp"
        android:textColor="#2C2C2C"
        android:textColorHint="#636363" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/nunito_sans"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="#2C2C2C"
        android:textColorHint="#636363" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        style="@style/LoginButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/registrate" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>