<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/whiteview"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:background="@drawable/rectangle_view2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nunito_sans"
        android:shadowColor="#313435"
        android:text="@string/bienvenidos"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/whiteview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/whiteview" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/whiteview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/happsmileslogo" />

    <Button
        android:id="@+id/logInOptionBtnId"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/lightblue5"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/signUpOptionBtnId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionId" />

    <Button
        android:id="@+id/signUpOptionBtnId"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/registrarse"
        android:textColor="@color/lightblue5"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logInOptionBtnId"
        app:layout_constraintTop_toTopOf="@+id/logInOptionBtnId" />

    <TextView
        android:id="@+id/descriptionId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/somos_un_grupo_de_profesionales_especializados_en_las_distintas_reas_de_la_odontolog_a_y_que_tenemos_como_principal_objetivo_cuidar_tu_salud_dental"
        android:textColor="#5A5A5A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>